--- a/Carrefour_R_analysis_rmd.ipynb
+++ b/Carrefour_R_analysis_rmd.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyBK0nS1+vmpaR9C+JBx9D",
+      "authorship_tag": "ABX9TyMDFnT1yB0NwQvxVB56wGan",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1834,6 +1834,247 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 398
+        },
+        "id": "aNl8adZuOGR7",
+        "outputId": "92be6af7-7beb-4e19-e4ff-97bae00199ec"
+      },
+      "source": [
+        "# creating a model using apriori function \n",
+        "#\n",
+        "rules <- apriori (df2, parameter = list(supp = 0.001, conf = 0.8))\n",
+        "rules\n",
+        "\n"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Apriori\n",
+            "\n",
+            "Parameter specification:\n",
+            " confidence minval smax arem  aval originalSupport maxtime support minlen\n",
+            "        0.8    0.1    1 none FALSE            TRUE       5   0.001      1\n",
+            " maxlen target  ext\n",
+            "     10  rules TRUE\n",
+            "\n",
+            "Algorithmic control:\n",
+            " filter tree heap memopt load sort verbose\n",
+            "    0.1 TRUE TRUE  FALSE TRUE    2    TRUE\n",
+            "\n",
+            "Absolute minimum support count: 7 \n",
+            "\n",
+            "set item appearances ...[0 item(s)] done [0.00s].\n",
+            "set transactions ...[119 item(s), 7501 transaction(s)] done [0.00s].\n",
+            "sorting and recoding items ... [116 item(s)] done [0.00s].\n",
+            "creating transaction tree ... done [0.00s].\n",
+            "checking subsets of size 1 2 3 4 5 6 done [0.01s].\n",
+            "writing ... [74 rule(s)] done [0.00s].\n",
+            "creating S4 object  ... done [0.00s].\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "set of 74 rules "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ASZJPV0pSGla"
+      },
+      "source": [
+        "74 rules is on a lower side thus decreasing the confidence level"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 398
+        },
+        "id": "JO5GUmdTSOru",
+        "outputId": "6f8654b4-35fd-4db1-97bd-1963cc50f3c8"
+      },
+      "source": [
+        "rules2 <- apriori (df2, parameter = list(supp = 0.001, conf = 0.7))\n",
+        "rules2"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Apriori\n",
+            "\n",
+            "Parameter specification:\n",
+            " confidence minval smax arem  aval originalSupport maxtime support minlen\n",
+            "        0.7    0.1    1 none FALSE            TRUE       5   0.001      1\n",
+            " maxlen target  ext\n",
+            "     10  rules TRUE\n",
+            "\n",
+            "Algorithmic control:\n",
+            " filter tree heap memopt load sort verbose\n",
+            "    0.1 TRUE TRUE  FALSE TRUE    2    TRUE\n",
+            "\n",
+            "Absolute minimum support count: 7 \n",
+            "\n",
+            "set item appearances ...[0 item(s)] done [0.00s].\n",
+            "set transactions ...[119 item(s), 7501 transaction(s)] done [0.00s].\n",
+            "sorting and recoding items ... [116 item(s)] done [0.00s].\n",
+            "creating transaction tree ... done [0.00s].\n",
+            "checking subsets of size 1 2 3 4 5 6 done [0.01s].\n",
+            "writing ... [200 rule(s)] done [0.00s].\n",
+            "creating S4 object  ... done [0.00s].\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "set of 200 rules "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SM__-facSYhI"
+      },
+      "source": [
+        "200 rules is somewhat substantial"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 538
+        },
+        "id": "FcGL9pmJSeNz",
+        "outputId": "209b5408-8e0f-424f-d7f6-ae799d7529c5"
+      },
+      "source": [
+        "# Exploring our rules\n",
+        "#\n",
+        "summary(rules2)"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "set of 200 rules\n",
+              "\n",
+              "rule length distribution (lhs + rhs):sizes\n",
+              "  3   4   5   6 \n",
+              " 44 122  33   1 \n",
+              "\n",
+              "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. \n",
+              "  3.000   4.000   4.000   3.955   4.000   6.000 \n",
+              "\n",
+              "summary of quality measures:\n",
+              "    support           confidence        coverage             lift       \n",
+              " Min.   :0.001067   Min.   :0.7000   Min.   :0.001067   Min.   : 2.937  \n",
+              " 1st Qu.:0.001067   1st Qu.:0.7273   1st Qu.:0.001466   1st Qu.: 3.088  \n",
+              " Median :0.001200   Median :0.7500   Median :0.001466   Median : 3.616  \n",
+              " Mean   :0.001330   Mean   :0.7767   Mean   :0.001728   Mean   : 4.160  \n",
+              " 3rd Qu.:0.001466   3rd Qu.:0.8139   3rd Qu.:0.001866   3rd Qu.: 4.418  \n",
+              " Max.   :0.003066   Max.   :1.0000   Max.   :0.004133   Max.   :12.722  \n",
+              "     count      \n",
+              " Min.   : 8.00  \n",
+              " 1st Qu.: 8.00  \n",
+              " Median : 9.00  \n",
+              " Mean   : 9.98  \n",
+              " 3rd Qu.:11.00  \n",
+              " Max.   :23.00  \n",
+              "\n",
+              "mining info:\n",
+              " data ntransactions support confidence\n",
+              "  df2          7501   0.001        0.7\n",
+              "                                                            call\n",
+              " apriori(data = df2, parameter = list(supp = 0.001, conf = 0.7))"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TF_7I6GmWmF_",
+        "outputId": "825a4655-3edf-43af-b05b-82d2f0ce7d36"
+      },
+      "source": [
+        "#  \n",
+        "#\n",
+        "rules2<-sort(rules2, by=\"confidence\", decreasing=TRUE)\n",
+        "inspect(rules2[1:10])"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     lhs                        rhs                 support confidence    coverage      lift count\n",
+            "[1]  {french fries,                                                                               \n",
+            "      mushroom cream sauce,                                                                       \n",
+            "      pasta}                 => {escalope}      0.001066524  1.0000000 0.001066524 12.606723     8\n",
+            "[2]  {ground beef,                                                                                \n",
+            "      light cream,                                                                                \n",
+            "      olive oil}             => {mineral water} 0.001199840  1.0000000 0.001199840  4.195190     9\n",
+            "[3]  {cake,                                                                                       \n",
+            "      meatballs,                                                                                  \n",
+            "      mineral water}         => {milk}          0.001066524  1.0000000 0.001066524  7.717078     8\n",
+            "[4]  {cake,                                                                                       \n",
+            "      olive oil,                                                                                  \n",
+            "      shrimp}                => {mineral water} 0.001199840  1.0000000 0.001199840  4.195190     9\n",
+            "[5]  {mushroom cream sauce,                                                                       \n",
+            "      pasta}                 => {escalope}      0.002532996  0.9500000 0.002666311 11.976387    19\n",
+            "[6]  {red wine,                                                                                   \n",
+            "      soup}                  => {mineral water} 0.001866418  0.9333333 0.001999733  3.915511    14\n",
+            "[7]  {eggs,                                                                                       \n",
+            "      mineral water,                                                                              \n",
+            "      pasta}                 => {shrimp}        0.001333156  0.9090909 0.001466471 12.722185    10\n",
+            "[8]  {herb & pepper,                                                                              \n",
+            "      mineral water,                                                                              \n",
+            "      rice}                  => {ground beef}   0.001333156  0.9090909 0.001466471  9.252498    10\n",
+            "[9]  {ground beef,                                                                                \n",
+            "      pancakes,                                                                                   \n",
+            "      whole wheat rice}      => {mineral water} 0.001333156  0.9090909 0.001466471  3.813809    10\n",
+            "[10] {frozen vegetables,                                                                          \n",
+            "      milk,                                                                                       \n",
+            "      spaghetti,                                                                                  \n",
+            "      turkey}                => {mineral water} 0.001199840  0.9000000 0.001333156  3.775671     9\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ikd_YFkyvuBX"
@@ -1848,7 +2089,7 @@
         "id": "T6Cr2Qqav6q5"
       },
       "source": [
-        ""
+        "# "
       ],
       "execution_count": null,
       "outputs": []
